# Phyton_Blueprint

./: .editorconfig  AGENTS.md  LICENSE  README.md  prompts.md  pyproject.toml  pyrightconfig.json
src/infrastructure/: config_repository.py
