[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phyton_blueprint"
dynamic = ["version"]
description = "A Python project blueprint with a clean, modular structure for development by humans and AI agents."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Acquati" },
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = ""

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]
lint = [
  "ruff>=0.5",
]
typecheck = [
  "mypy>=1.10",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.envs.default]
dependencies = []

[tool.hatch.envs.dev]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 200
target-version = "py311"

[tool.ruff.format]
indent-style = "tab"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["W191"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
